--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
@@ -118,9 +118,9 @@
 
                         <p:outputLabel value="Route Type: " /><p:spacer width="20" height="20" />
                         <p:selectOneRadio  value="#{routeManagerBean.routeType}">
-                            <f:selectItem itemLabel="Land" itemValue="land" />
-                            <f:selectItem itemLabel="Sea" itemValue="sea" />
-                            <f:selectItem itemLabel="Air" itemValue="air" />
+                            <f:selectItem itemLabel="Land" itemValue="Land" />
+                            <f:selectItem itemLabel="Sea" itemValue="Sea" />
+                            <f:selectItem itemLabel="Air" itemValue="Air" />
                         </p:selectOneRadio>  
                         
                         <h:outputLabel for="distance" style="font-weight: bold" value="Distance (Km):  " /><p:spacer width="20" height="20" />
