--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -86,7 +86,7 @@
                     </c:if>
                     <div class="col-md-4">
                         <div class="tile-overlay">GRNS</div>
-                        <p:commandLink action="#" disabled="${disablegrns}" styleClass="dashboard-box grnstile" >
+                        <p:commandLink action="/grns/grnsindexpage.xhtml?faces-redirect=true" disabled="${disablegrns}" styleClass="dashboard-box grnstile" >
                         </p:commandLink>
                     </div>
                 </div>
