--- a/MerlionPortal/MerlionPortal-war/web/grns/viewallposts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/viewallposts.xhtml
@@ -98,7 +98,9 @@
                                 <h:outputText value="#{myTPost.expireDate}" />
                             </p:column>
                         </p:dataTable>
+                        <p:commandButton action="#{marketplaceManagedBean.bidSelectedPost()}" value="Start Bidding"/> 
                     </p:tab>
+                    
                     <p:tab title="Transportation Space Post">
                         <p:dataTable id="stpost" var="stpost" selectionMode="single" sortMode="single" value="#{marketplaceManagedBean.allSTPosts}" 
                                      widgetVar="TPostTable"
@@ -146,6 +148,7 @@
                                 <h:outputText value="#{myTPost.expireDate}" />
                             </p:column>
                         </p:dataTable>
+                        <p:commandButton action="#{marketplaceManagedBean.bidSelectedSTPost()}" value="Start Bidding"/> 
                     </p:tab>
 
                     <p:tab title="Warehouse Requests"> 
@@ -194,7 +197,9 @@
                             </p:dataTable>
                         </h:panelGrid>
                         <br></br>
+                        <p:commandButton action="#{marketplaceManagedBean.bidSelectedWPost()}" value="Start Bidding"/> 
                     </p:tab>
+                    
                     <p:tab title="Warehouse Space Requests"> 
                         <h:panelGrid columns="1" cellpadding="10">  
                             <p:dataTable id="WPosts" var="WPost" selectionMode="single" sortMode="single" value="#{marketplaceManagedBean.allSWPosts}" 
@@ -244,10 +249,11 @@
                             </p:dataTable>
                         </h:panelGrid>
                         <br></br>
+                        <p:commandButton action="#{marketplaceManagedBean.bidSelectedSWPost()}" value="Start Bidding"/> 
                     </p:tab>
                 </p:tabView>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton action="#{marketplaceManagedBean.bidSelectedPost()}" value="Start Bidding"/> 
+
             </h:form>
         </ui:define>
     </ui:composition>
