--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
@@ -22,15 +22,10 @@
         <ui:define name="left">
             <h:form id="formMain">
                 <p:menu>
-                    <p:submenu label ="Map">
-                        <p:submenu label="Node" >
-                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                            <p:menuitem value="View All Nodes" url="viewallnode.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Route" >
-                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                            <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
-                        </p:submenu>
+                    <p:submenu label ="Map Settings">
+                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                        <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                     </p:submenu>
                     <p:submenu label =" Manage Your Transportation">
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"  style="background-color: lavender"/>
