--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallmaintenancelog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallmaintenancelog.xhtml
@@ -22,15 +22,10 @@
         <ui:define name="left">
             <h:form id="formMain">
                 <p:menu>
-                    <p:submenu label ="Map">
-                        <p:submenu label="Node" >
-                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                            <p:menuitem value="View All Nodes" url="viewallnode.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Route" >
-                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                            <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
-                        </p:submenu>
+                    <p:submenu label ="Map Settings">
+                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                        <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                     </p:submenu>
                     <p:submenu label =" Manage Your Transportation">
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"  style="background-color: lavender"/>
@@ -144,20 +139,20 @@
                         <p:column filterBy="#{schedule.maintenanceLogId}" filterMatchMode="exact" headerText="Schedule ID" >
                             <h:outputText value="#{schedule.maintenanceLogId}" />
                         </p:column>
-                    <p:column  headerText="cost">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{schedule.cost}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{schedule.cost}" style="width:100%" label="Capacity"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
+                        <p:column  headerText="cost">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{schedule.cost}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{schedule.cost}" style="width:100%" label="Capacity"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
 
-                    <p:column  headerText="description">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{schedule.description}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{schedule.description}" style="width:100%" label="Price"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
+                        <p:column  headerText="description">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{schedule.description}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{schedule.description}" style="width:100%" label="Price"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
                         <p:column  headerText="startDate" filterBy="#{schedule.startDate}" filterMatchMode="contains">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{schedule.startDate}" /></f:facet>
