--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -22,15 +22,10 @@
         <ui:define name="left">
             <h:form id="formMain">
                 <p:menu>
-                    <p:submenu label ="Map">
-                        <p:submenu label="Node" >
-                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                            <p:menuitem value="View All Nodes" url="viewallnode.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Route" >
-                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                            <p:menuitem value="View All Routes" url="viewallroute.xhtml"/>
-                        </p:submenu>
+                    <p:submenu label ="Map Settings">
+                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                        <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                     </p:submenu>
                     <p:submenu label =" Manage Your Transportation">
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"  style="background-color: lavender"/>
@@ -88,109 +83,109 @@
                 <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
-            <p:panel id="panel" header=" View Transportation Asset for A Location">
-                <p:ajaxStatus style="width:16px;height:16px;">
-                    <f:facet name="start">
-                        <h:graphicImage value="/img/load.gif" />
-                    </f:facet>
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-                <p:panelGrid>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="location" value="Location Name: " />
+                <p:panel id="panel" header=" View Transportation Asset for A Location">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                    <p:panelGrid>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="location" value="Location Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="location" value="#{TTassetViewEditManagedBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a location">
+                                    <p:ajax listener="#{TTassetViewEditManagedBean.onLocationChange()}" update="tAssetData" />
+                                    <f:selectItem itemLabel="Select Location" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{tAssetManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+
+                    <p:dataTable id="tAssetData" var="tAsset" sortMode="multiple" editable="true" value="#{TTassetViewEditManagedBean.tassets}" 
+                                 widgetVar="transportationAssetTable"
+                                 emptyMessage="No Transportation Asset found"
+                                 rowKey="#{tAsset.assetId}">
+
+                        <f:facet name="header">                    
+                            <p:outputPanel>
+                                <h:outputText value="Search tAsset fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('transportationAssetTable').filter()" />
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:ajax event="rowEdit" listener="#{TTassetViewEditManagedBean.onRowEdit}"/>
+                        <p:ajax event="rowEditCancel" listener="#{TTassetViewEditManagedBean.onRowCancel}"/>                
+
+
+                        <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
+                            <h:outputText value="#{tAsset.assetId}" />
                         </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="location" value="#{TTassetViewEditManagedBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a location">
-                                <p:ajax listener="#{TTassetViewEditManagedBean.onLocationChange()}" update="tAssetData" />
-                                <f:selectItem itemLabel="Select Location" itemValue="" noSelectionOption="true" />
-                                <f:selectItems value="#{tAssetManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
-                            </p:selectOneMenu>
+
+                        <p:column  filterBy="#{tAsset.assetType}" filterMatchMode="contains" headerText="Asset Type">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{tAsset.assetType}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{tAsset.assetType}" style="width:100%" label="Asset Type"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>                
+                        <p:column  headerText="Capacity">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{tAsset.capacity}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{tAsset.capacity}" style="width:100%" label="Capacity"/></f:facet>
+                            </p:cellEditor>
                         </p:column>
-                    </p:row>
-                </p:panelGrid>
-
-                <p:dataTable id="tAssetData" var="tAsset" sortMode="multiple" editable="true" value="#{TTassetViewEditManagedBean.tassets}" 
-                             widgetVar="transportationAssetTable"
-                             emptyMessage="No Transportation Asset found"
-                             rowKey="#{tAsset.assetId}">
-
-                    <f:facet name="header">                    
-                        <p:outputPanel>
-                            <h:outputText value="Search tAsset fields:" />
-                            <p:inputText id="globalFilter" onkeyup="PF('transportationAssetTable').filter()" />
-                        </p:outputPanel>
-                    </f:facet>
-
-                    <p:ajax event="rowEdit" listener="#{TTassetViewEditManagedBean.onRowEdit}"/>
-                    <p:ajax event="rowEditCancel" listener="#{TTassetViewEditManagedBean.onRowCancel}"/>                
 
 
-                    <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
-                        <h:outputText value="#{tAsset.assetId}" />
-                    </p:column>
-
-                    <p:column  filterBy="#{tAsset.assetType}" filterMatchMode="contains" headerText="Asset Type">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{tAsset.assetType}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{tAsset.assetType}" style="width:100%" label="Asset Type"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>                
-                    <p:column  headerText="Capacity">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{tAsset.capacity}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{tAsset.capacity}" style="width:100%" label="Capacity"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
+                        <p:column  headerText="Price">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{tAsset.price}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{tAsset.price}" style="width:100%" label="Price"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
 
-                    <p:column  headerText="Price">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{tAsset.price}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{tAsset.price}" style="width:100%" label="Price"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
-
-
-                    <p:column  headerText="Speed">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{tAsset.speed}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{tAsset.speed}" style="width:100%" label="Speed"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
+                        <p:column  headerText="Speed">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{tAsset.speed}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{tAsset.speed}" style="width:100%" label="Speed"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
 
 
-                    <p:column  headerText="Status">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{tAsset.status}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{tAsset.status}" style="width:100%" label="Status"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
+                        <p:column  headerText="Status">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{tAsset.status}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{tAsset.status}" style="width:100%" label="Status"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
 
-                    <p:column headerText = "Delete Transportation Asset">
-                        <p:commandButton action="#{TTassetViewEditManagedBean.deleteTAsset(tAsset)}" update="tAssetData" value="Delete">
-                            <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
-                        </p:commandButton> 
-                        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-                            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                        </p:confirmDialog>
-                    </p:column>
+                        <p:column headerText = "Delete Transportation Asset">
+                            <p:commandButton action="#{TTassetViewEditManagedBean.deleteTAsset(tAsset)}" update="tAssetData" value="Delete">
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
+                            </p:commandButton> 
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
+                        </p:column>
 
-                    <p:column style="width:32px">
-                        <p:rowEditor />
-                    </p:column>
+                        <p:column style="width:32px">
+                            <p:rowEditor />
+                        </p:column>
 
-                </p:dataTable>
-                
-                <!--<p:chart type="pie" model="#{TTassetViewEditManagedBean.pieModel1}" style="width:400px;height:300px" />-->
-                
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            </p:panel>
+                    </p:dataTable>
+
+<!--<p:chart type="pie" model="#{TTassetViewEditManagedBean.pieModel1}" style="width:400px;height:300px" />-->
+
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                </p:panel>
             </h:form>
         </ui:define>
     </ui:composition>
