--- a/MerlionPortal/MerlionPortal-war/web/tms/viewconnection.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewconnection.xhtml
@@ -126,10 +126,82 @@
 
                 </p:dataTable>
                 <br></br>
+                <h:form id="form">
+
+                    <p:panel id="panel" header=" View Routes for Node">
+                        <p:ajaxStatus style="width:16px;height:16px;">
+                            <f:facet name="start">
+                                <h:graphicImage value="/img/load.gif" />
+                            </f:facet>
+                            <f:facet name="complete">
+                                <h:outputText value="" />
+                            </f:facet>
+                        </p:ajaxStatus>
+                        <p:panelGrid>
+                            <p:row>
+                                <p:column>
+                                    <p:outputLabel for="node" value="Node Name: " />
+                                </p:column>
+                                <p:column>
+                                    <p:selectOneMenu id="node" value="#{routeViewEditManagedBean.nodeId}"  style="width:300px" required="true" requiredMessage="Please select a Origin">
+                                        <p:ajax listener="#{routeViewEditManagedBean.onNodeChange()}" update="route" />
+                                        <f:selectItem itemLabel="Select Node" itemValue="" noSelectionOption="true" />
+                                        <f:selectItems value="#{routeViewEditManagedBean.nodes}" var="node" itemLabel="ID:#{node.nodeId} Name:#{node.locationName}"  itemValue="#{node.nodeId}"/>
+                                    </p:selectOneMenu>
+                                </p:column>
+                            </p:row>
+                        </p:panelGrid>
+
+                        <p:dataTable id="route" var="route" sortMode="multiple" editable="true" value="#{routeViewEditManagedBean.routes}" 
+                                     widgetVar="routeTable"
+                                     emptyMessage="No Route found"
+                                     rowKey="#{route.routeId}">
+
+                            <p:column headerText="Route Id" >
+                                <h:outputText value="#{route.routeId}" />
+                            </p:column>
+
+                            <p:column  filterBy="#{route.routeType}" filterMatchMode="contains" headerText="Route Type">
+                                <p:cellEditor>
+                                    <f:facet name="output"><h:outputText value="#{route.routeType}" /></f:facet>
+                                    <f:facet name="input"><p:inputText value="#{route.routeType}" style="width:100%" label="Asset Type"/></f:facet>
+                                </p:cellEditor>
+                            </p:column>                
+
+                            <p:column  filterBy="#{route.destination}" filterMatchMode="contains" headerText="Destination">
+                                <p:cellEditor>
+                                    <f:facet name="output"><h:outputText value="#{route.destination}" /></f:facet>
+                                    <f:facet name="input"><p:inputText value="#{route.destination}" style="width:100%" label="Price"/></f:facet>
+                                </p:cellEditor>
+                            </p:column>
+
+
+                            <p:column  headerText="Distance">
+                                <p:cellEditor>
+                                    <f:facet name="output"><h:outputText value="#{route.distance} km" /></f:facet>
+                                    <f:facet name="input"><p:inputText value="#{route.distance}" style="width:100%" label="Speed"/></f:facet>
+                                </p:cellEditor>
+                            </p:column>
+
+                            <p:column headerText = "Delete Route">
+                                <p:commandButton action="#{routeViewEditManagedBean.deleteRoute(route)}" update="route" value="Delete">
+                                    <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Route?" icon="ui-icon-alert" />
+                                </p:commandButton> 
+                                <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                    <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                    <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                                </p:confirmDialog>
+                            </p:column>
+
+                        </p:dataTable>
+                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    </p:panel>
+                </h:form>
+
+
+                <br></br>
                 <p:messages id="msgs" showDetail="true" autoUpdate="true" closable="true" />
             </h:form>
         </ui:define>
     </ui:composition>
 </html>                        
-
-
